# adbd

./: .gitignore  configure  configure.ac
src/: Makefile.am  Makefile.in  adb.c  adb.h  fdevent.c  fdevent.h  file_sync_service.c  file_sync_service.h  services.c  sockets.c  sysdeps.h  transport.c  transport_usb.c  usb_linux_client.c  utils.h
